# basicSLAM

./: .gitignore  CMakeLists.txt  calib.yml  trajectory.csv
Tests/: testEnv.cpp  testFeature.cpp  testMinimum.cpp  testP0Features.cpp  testVO.cpp
include/: Controller.hpp  DataLoader.hpp  FeatureExtractor.hpp  Features.hpp  Initializer.hpp  KeyFrame.hpp  Localizer.hpp  MapManager.hpp  MapPoint.hpp  Matcher.hpp  Optimizer.hpp  PoseEstimator.hpp  Tracker.hpp  VisualOdometry.hpp  Visualizer.hpp
scripts/: calibrate_camera.py  video_to_frames.py
src/: Controller.cpp  DataLoader.cpp  FeatureExtractor.cpp  Initializer.cpp  Localizer.cpp  MapManager.cpp  Matcher.cpp  Optimizer.cpp  PoseEstimator.cpp  Tracker.cpp  VisualOdometry.cpp  Visualizer.cpp
